# fih3

./: .gitignore  CMakeLists.txt  main.cpp  old.cpp  readme.md
src/: bitboard.cpp  board.cpp
src/include/: bitboard.h  board.h  types.h
